# algorithm-maze-designer

./: .gitignore  AGENTS.md  BUG_ANALYSIS.md  CLAUDE.md  CMakeLists.txt  CONTEXT_HANDOFF.md  CONTRIBUTING.md  Makefile  PROJECT_WORKFLOW.md  PROJ_GUIDE.md  QA_CHECKLIST.md  QA_HANDOFF_REPORT.md  README.md  RL_TRAINING_GUIDE.md  SERVER_GUIDE.md  build.bat  goal.md  task_plan.md  课程设计说明.md  运行迷宫设计.bat
.github/: pull_request_template.md
docs/: 01-四种迷宫生成方法.md  02-四种算法复杂度风格特性分析.md  03-遗传算法与对抗模式优化设计.md  04-评估指标与优化效果衡量.md  05-其他-交叉测试矩阵与项目架构补充.md  AI玩家接口说明.md  PROJ_GUIDE.md  QA_REVIEW_REPORT.md  QA_REVIEW_ROUND2.md  README.md  input说明.txt  polish-优化改动总结.md  polish分支-改动清单.md  任务2-3算法批注说明.md  任务设计书.md  优化策略说明.md  方案乙_AI玩家.md  课程设计宣讲.html  课程设计说明.md  验收对照清单.md  验收速查-代码结构与迷宫算法.md
docs/方案设计思路/: OPTIMIZER_GUIDE.md  方案甲_迷宫设计.md  硬件训练思路.md  算法课程设计思路.md
docs/输入输出说明/: maze_15_15.json  助教验收与评分操作手册.html  平台登录和api获取及配置.docx
logs/: optimizer_result.json  training_log.txt
src/: bosssolver.cpp  bosssolver.h  main.cpp  mainwindow.cpp  mainwindow.h  maze.cpp  maze.h  mazewidget.cpp
src/ai/: aiplayerformat.h  greedy_player.cpp  greedy_player.h
src/core/: maze.cpp  maze.h
src/gui/: mainwindow.cpp  mainwindow.h  mazewidget.cpp  mazewidget.h
src/include/: aiplayerformat.h  battlewindow.h  bosssolver.h  coevolution.h  mainwindow.h  maze.h  maze_evaluator.h  maze_optimizer.h  mazewidget.h  qlearning_optimizer.h  resource_placer.h
src/include/ai/: aiplayerformat.h  greedy_player.h  rl_player.h
src/include/core/: maze.h
src/include/game/: bosssolver.h
src/include/io/: maze_saver.h
src/include/optimization/: maze_evaluator.h  maze_optimizer.h  resource_placer.h
src/include/ui/: battlewindow.h  mainwindow.h  mazewidget.h
src/source/: aiplayerformat.cpp  battlewindow.cpp  bosssolver.cpp  coevolution.cpp  main.cpp  mainwindow.cpp  maze.cpp  maze_evaluator.cpp  maze_optimizer.cpp  maze_saver.cpp  mazewidget.cpp  qlearning_optimizer.cpp  resource_placer.cpp
src/source/ai/: aiplayerformat.cpp  greedy_player.cpp  qlearning_optimizer.cpp  rl_player.cpp
src/source/core/: maze.cpp
src/source/game/: bosssolver.cpp
src/source/io/: maze_saver.cpp
src/source/legacy/: aiplayerformat.cpp
src/source/optimization/: coevolution.cpp  maze_evaluator.cpp  maze_optimizer.cpp  resource_placer.cpp
src/source/ui/: battlewindow.cpp  mainwindow.cpp  mazewidget.cpp
src2/include/: maze.h
src2/source/: main.cpp  mainwindow.cpp
standalone_cpp_submissions/: README.md  REQ_0_1_divide_and_conquer_perfect_maze.cpp  REQ_0_2_backtracking_dfs_perfect_maze.cpp  REQ_0_3_branch_and_bound_layered_bfs_perfect_maze.cpp  REQ_0_4_kruskal_minimum_spanning_tree_perfect_maze.cpp  SOURCE_CODE_MAPPING.md
test-json/: boss_battle_check.json  maze_15_15.json  maze_check_15x15.json  resource_path_15x15.json
